noinst_PROGRAMS = cakelisp_bootstrap
cakelisp_bootstrap_SOURCES = Tokenizer.cpp \
Evaluator.cpp \
Utilities.cpp \
FileUtilities.cpp \
Converters.cpp \
Writer.cpp \
Generators.cpp \
GeneratorHelpers.cpp \
RunProcess.cpp \
OutputPreambles.cpp \
DynamicLoader.cpp \
ModuleManager.cpp \
Logging.cpp \
Build.cpp \
Metadata.cpp \
Main.cpp
cakelisp_bootstrap_CXXFLAGS = -DUNIX
cakelisp_bootstrap_LDADD = -ldl
cakelisp_bootstrap_LDFLAGS = -export-dynamic
